# algo_trading_labb

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_CONTRACTS.md  API_RATE_LIMIT_OPTIMIZATION.md  BUTTON_FIX_DOCS_INDEX.md  BUTTON_FIX_QUICKSTART.md  BUTTON_FIX_README.md  BUTTON_FIX_SUMMARY.md  BUTTON_FIX_TESTING.md  BUTTON_FIX_VISUAL_GUIDE.md  CHANGE_TRACKING_GUIDELINES.md  DAILY_1PCT_OPTIMIZATION.md  DECISIONS.md  DEPLOYMENT_GUIDE.md  Dockerfile  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_PLAN.md  Jenkinsfile  LLM_README.md  LOCAL_AI_IMPROVEMENTS.md  QUICKSTART.md  QUICKSTART_EN.md  QUICK_API_OPTIMIZATION.md  QUICK_EXCHANGE_SETUP.md  QUICK_START.md  README.md  REAL_EXCHANGE_INTEGRATION.md  RECOVERY_REPORT.md  SISTEM_HAZIRLANDI.txt  SPEC.md  STARTUP_GUIDE.md  SYSTEM_STATUS_SUMMARY.md  TASK.md  TECHNICAL_CHANGES.md  alembic.ini  (+34 more)
.github/: copilot-instructions.md
ab_test_results/: dashboard_a6e03d4d.json  full_results_a6e03d4d.json  quick_comparison.json
alembic/: env.py
api/: __init__.py  advanced_api.py  api.py  backtest_dashboard.html  dashboard.html  dashboard_unified.html  dashboard_v2.html  feature_flags_router.py  graphql_api.py  health.py  orchestrator_api.py  portfolio_api.py  prometheus_router.py  rate_limiting.py  readiness_calculator.py  schemas.py  security.py  shadow_health_metrics.py  strategy_dashboard.html  unified_trading_api.py  validation.py  versioning.py  websocket_api.py
bot/: __init__.py  adaptive_risk_controller.py  advanced_backtesting.py  advanced_risk.py  advanced_trading_brain.py  aggressive_trading_engine.py  ai.py  ai_brain_v2.py  ai_enhanced.py  ai_integration.py  ai_trading_advisor.py  ai_trading_brain.py  alert_config.py  alpaca_adapter.py  async_database.py  auto_recovery.py  auto_retraining.py  backtesting.py  bot.py  broker_router.py  calendar_view.py  circuit_breaker.py  config.py  config_loader.py  config_schemas.py  continuous_learner.py  control.py  cross_market_analysis.py  data_adapters.py  data_fetcher.py  data_freshness.py  data_intelligence.py  data_store.py  database.py  dca_manager.py  discord_alerts.py  drawdown_analysis.py  enhanced_adapter.py  enhanced_signal_processor.py  enhanced_trading_engine.py  (+90 more)
config/: position_sizing.py  position_sizing_config.json
data/: BTC_USD_data.csv  ETH_USD_data.csv  SPY_data.csv  assets.sample.yml  bot_state.json  btc_backtest_data.csv  cache.db  capital_preservation_state.json  commodity_config.json  deep_learning_comparison_report.md  enhanced_trading_config.json  equity.json  feeds.news.yml  feeds.sample.yml  macro_events.llm.json  macro_events.sample.json  phase1_validation_report.json  phase2a_go_nogo_summary.json  phase2a_validation_report.json  phase2b_go_nogo_summary.json  phase2b_program_started.json  phase2c_decision_packet_2026-01-29.json  playbook.assets.sample.yml  portfolio.json  portfolio.sample.json  preservation_checklist_report.json  safety_state.json  sample_ohlcv.csv  signals.json  state.json  stock_config.json  strategy_config.json  trade_alerts.json  trade_forensics_state.json  training_results.json  (+1 more)
(+805 files in other folders)
